# cv-hands-tracking

./: .gitignore  README.md  pyproject.toml
src/: __init__.py
src/capture/: __init__.py  base.py  camera.py  discovery.py
src/metrics/: __init__.py  face_metrics.py  hand_metrics.py
src/ui/: layout_settings.py  main_window.py  runtime.py  source_dialog.py
src/vision/: __init__.py  mediapipe_engine.py
tests/: test_face_metrics.py  test_hand_metrics.py
